# Tarea2_Compu_Grafica

./: README.md
Triangle_threejs/: README.md  index.html  package-lock.json  package.json
Triangle_threejs/src/js/: script.js
Triangle_webgl2/: README.md  index.html  package-lock.json  package.json
Triangle_webgl2/src/js/: script.js
Triangleopengl/: CMakeLists.txt  README.md
Triangleopengl/include/glad/: glad.h
Triangleopengl/src/: glad.c  glad.cZone.Identifier  triangle.cpp
